--- a/index.html
+++ b/index.html
@@ -265,13 +265,16 @@
                                     I am a Front-end web developer, who can design beautiful and attractive website with
                                     HTML, CSS,
                                     JavaScript, with decent knowledge of colour for making Websites Templates.
+                                    <br>
+                                    I also have decent knowledge of php and basic knowledge of SQL with which I can
+                                    build a full stack website for you.
                                 </h5>
                                 <p class="headings"> What am I doing currently?</p>
                                 <h5
                                     style="letter-spacing: 2px;word-spacing:5px;opacity:.8;font-size:small;margin-bottom:5%">
                                     Currently persuing my Masters in Computer Application and learning new programming
-                                    languages like Java, Python, ReactJS, MySQL, PHP and seeking role as Front-end
-                                    developer.
+                                    languages like Python, ReactJS, MySQL, PHP and seeking role as Front-end
+                                    developer or Full stack web developer.
                                 </h5>
 
 
@@ -283,44 +286,36 @@
                             </a>
                         </div>
                     </div>
-                    <div class="education">
-                        <p class="headings">Education</p>
+                    <div class="experience">
+                        <p class="headings">Experience</p>
                         <hr class="textUnderline">
-
                         <ul>
-                            <li class="eduItem">
+                            <li class="expItem">
                                 <div class="item_top">
-                                    <h5>MIT World Peace University Pune</h5>
-                                    <span>(2022 — 2024)</span>
+                                    <h4>OctaNet</h4>
+                                    <span>(JUN 2023-JUL 2023)</span>
                                 </div>
-                                <h3>Master of Computer Application (Science)</h3>
+                                <h3>Web Developer Intern</h3>
+                                <p>Successfully developed a webpage with features for creating, editing, and
+                                    organizing digital notes and analyzed and cloned a website.
+                                </p>
                             </li>
-                            <li class="eduItem">
+                            <li class="expItem">
                                 <div class="item_top">
-                                    <h5>Chaudhary Charan Singh University Meerut</h5>
-                                    <span>(2019-2022)</span>
+                                    <h4>Dharohar</h4>
+                                    <span>(JUN 2021-Aug 2021)</span>
                                 </div>
-                                <h3>Bachelor of Computer Application (Computer Science)</h3>
+                                <h3>WordPress Developer</h3>
+                                <p>Designed and developed a fully functional WordPress website, including custom themes,
+                                    plugins, and responsive design. Also created a visually appealing logo that captured
+                                    the
+                                    brand identity effectively.
+                                </p>
                             </li>
-                            <li class="eduItem">
-                                <div class="item_top">
-                                    <h5>Central Board of Secondary Education
-                                    </h5>
-                                    <span>(2017-2019)</span>
-                                </div>
-                                <h3>Higher Secondary School Certificate</h3>
-                            </li>
-                            <li class="eduItem">
-                                <div class="item_top">
-                                    <h5>Central Board of Secondary Education
-                                    </h5>
-                                    <span>(2017)</span>
-                                </div>
-                                <h3>Secondary School Certificate</h3>
-                            </li>
-                        </ul>
 
+                        </ul>
                     </div>
+
 
                     <div class="skills">
                         <p class="headings">Skills</p>
@@ -438,34 +433,43 @@
                             </div>
                         </div>
                     </div>
-                    <div class="experience">
-                        <p class="headings">Experience</p>
+                    <div class="education">
+                        <p class="headings">Education</p>
                         <hr class="textUnderline">
-                        <ul>
-                            <li class="expItem">
-                                <div class="item_top">
-                                    <h4>OctaNet</h4>
-                                    <span>(JUN 2023-JUL 2023)</span>
-                                </div>
-                                <h3>Web Developer Intern</h3>
-                                <p>Successfully developed a webpage with features for creating, editing, and
-                                    organizing digital notes and analyzed and cloned a website.
-                                </p>
-                            </li>
-                            <li class="expItem">
-                                <div class="item_top">
-                                    <h4>Dharohar</h4>
-                                    <span>(JUN 2021-Aug 2021)</span>
-                                </div>
-                                <h3>WordPress Developer</h3>
-                                <p>Designed and developed a fully functional WordPress website, including custom themes,
-                                    plugins, and responsive design. Also created a visually appealing logo that captured
-                                    the
-                                    brand identity effectively.
-                                </p>
-                            </li>
 
+                        <ul>
+                            <li class="eduItem">
+                                <div class="item_top">
+                                    <h5>MIT World Peace University Pune</h5>
+                                    <span>(2022 — 2024)</span>
+                                </div>
+                                <h3>Master of Computer Application (Science)</h3>
+                            </li>
+                            <li class="eduItem">
+                                <div class="item_top">
+                                    <h5>Chaudhary Charan Singh University Meerut</h5>
+                                    <span>(2019-2022)</span>
+                                </div>
+                                <h3>Bachelor of Computer Application (Computer Science)</h3>
+                            </li>
+                            <li class="eduItem">
+                                <div class="item_top">
+                                    <h5>Central Board of Secondary Education
+                                    </h5>
+                                    <span>(2017-2019)</span>
+                                </div>
+                                <h3>Higher Secondary School Certificate</h3>
+                            </li>
+                            <li class="eduItem">
+                                <div class="item_top">
+                                    <h5>Central Board of Secondary Education
+                                    </h5>
+                                    <span>(2017)</span>
+                                </div>
+                                <h3>Secondary School Certificate</h3>
+                            </li>
                         </ul>
+
                     </div>
                     <div id="resume">
                         <p class="headings">Resume</p>
