--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </div>
                     <div class="location">
                         <lord-icon src="https://cdn.lordicon.com/fihkmkwt.json" trigger="loop" delay="700"
-                            colors="primary:#1d1d1d,secondary:#9ac5f4">
+                            colors="primary:white,secondary:#9ac5f4">
                         </lord-icon>
                         <span>Pune Maharashtra</span>
                     </div>
@@ -265,6 +265,7 @@
                                     I am a Front-end web developer, who can design beautiful and attractive website with
                                     HTML, CSS,
                                     JavaScript, with decent knowledge of colour for making Websites Templates.
+                                    <br>
                                     <br>
                                     I also have decent knowledge of php and basic knowledge of SQL with which I can
                                     build a full stack website for you.
@@ -943,7 +944,9 @@
 
         <div class="cursor"></div>
         <div id="progress-bar">
-            <div id="progress-bar2"><i class=" fa-solid fa-person-arrow-up-from-line fa-bounce"></i></div>
+            <div id="progress-bar2">
+                <i class="fa-solid fa-file-arrow-up"></i>
+            </div>
         </div>
 
 
