--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                 Copyright © <span id="currentYear"></span>.
 
                 <p>
-                    Designed & Developed by <a href="#rightContent">Achint Tyagi</a>
+                    Designed & Developed by <a href="#">Achint Tyagi</a>
 
                 </p>
             </div>
