--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                     </div>
                 </div>
                 <div id="projects">
-                    <p class="headings">Projects</p>
+                    <p class="headings">Live Projects</p>
                     <hr class="textUnderline">
                     <br>
                     <p class="headings">
@@ -720,9 +720,6 @@
                                         page, designed using HTML and CSS, invites you to embark on a transformative
                                         journey towards holistic well-being</p>
                                 </div>
-
-
-
                             </li>
 
 
@@ -747,31 +744,8 @@
                                         the
                                         power of Bootstrap, delivering style.</p>
                                 </div>
-
-
-
                             </li>
-                            <li class="card">
-                                <div class="cardData">
-                                    <div class="cardImg" style="background-image: url(Assests/Images/E-com.jpg);">
 
-                                    </div>
-                                    <div class="card-content">
-                                        <p>E-com</p>
-                                    </div>
-                                    <h3 class="card-title">WordPress</h3>
-
-                                </div>
-                                <a target="_blank" href="https://dharohar.shop/" class="card-link">View</a>
-                                <div class="discripition">
-                                    <p>Discover the essence of an e-commerce website, once thriving on WordPress, which
-                                        provided a seamless shopping experience with a user-friendly interface, secure
-                                        transactions, and a diverse range of products. Although no longer active.</p>
-                                </div>
-
-
-
-                            </li>
                         </ul>
                     </div>
 
