--- a/index.html
+++ b/index.html
@@ -570,9 +570,10 @@
                     <p class="headings">Live Projects</p>
                     <hr class="textUnderline">
                     <br>
-                    <p class="headings">
-                        To explore more of my projects, please visit <a target="_blank"
-                            href="https://github.com/tyagi-achint">@GitHub</a>
+                    <p class="headings" style="
+                    margin-left: 5vw;"">
+                        To explore more of my projects, please visit <a target=" _blank"
+                        href="https://github.com/tyagi-achint">@GitHub</a>
                     </p>
                     <br>
                     <div class="container">
