--- a/index.html
+++ b/index.html
@@ -587,13 +587,21 @@
                                     </div>
                                     <h3 class="card-title">HTML, CSS, Php & JavaScript </h3>
                                 </div>
-                                <a target="_blank" href="https://crowdcanvass.rf.gd" class="card-link">View</a>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/forum_php"
+                                        class="card-link">Code</a>
+                                    <a target="_blank" href="https://crowdcanvass.rf.gd" class="card-link">Live</a>
+                                </div>
                                 <div class="discripition">
-                                    <p>Crowdcanvass is an interactive PHP forum website designed for online community
+                                    <p>Crowdcanvass is an interactive PHP forum website designed for online
+                                        community
                                         engagement. It offers features like user authentication, category-based
-                                        discussions, thread creation, question posting, and replies. Users can explore
-                                        diverse topics, ask questions, and participate in meaningful conversations. It's
-                                        a digital platform for knowledge sharing and social interaction, catering to the
+                                        discussions, thread creation, question posting, and replies. Users can
+                                        explore
+                                        diverse topics, ask questions, and participate in meaningful conversations.
+                                        It's
+                                        a digital platform for knowledge sharing and social interaction, catering to
+                                        the
                                         needs of the modern online community.</p>
                                 </div>
 
@@ -612,7 +620,11 @@
                                     <h3 class="card-title">php & JavaScript</h3>
 
                                 </div>
-                                <a target="_blank" href="https://funtimefillers.rf.gd/" class="card-link">View</a>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/php_games_website"
+                                        class="card-link">Code</a>
+                                    <a target="_blank" href="https://funtimefillers.rf.gd/" class="card-link">Live</a>
+                                </div>
                                 <div class="discripition">
                                     <p>Beat boredom with a captivating website featuring a collection of entertaining
                                         games
@@ -639,8 +651,12 @@
                                     </div>
                                     <h3 class="card-title">HTML, CSS & JavaScript</h3>
                                 </div>
-                                <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-2/"
-                                    class="card-link">View</a>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/OctaNet_June_Task-2"
+                                        class="card-link">Code</a>
+                                    <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-2/"
+                                        class="card-link">Live</a>
+                                </div>
                                 <div class="discripition">
                                     <p>A simple and intuitive note-taking webpage designed to help you stay organized
                                         and capture your thoughts effortlessly. This webpage is built using a
@@ -664,8 +680,12 @@
                                     <h3 class="card-title">HTML & CSS</h3>
 
                                 </div>
-                                <a target="_blank" href="https://tyagi-achint.github.io/Portfolio/"
-                                    class="card-link">View</a>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/Portfolio"
+                                        class="card-link">Code</a>
+                                    <a target="_blank" href="https://tyagi-achint.github.io/Portfolio/"
+                                        class="card-link">Live</a>
+                                </div>
                                 <div class="discripition">
                                     <p>Welcome to my portfolio website, a showcase of my creative work. With a clean and
                                         visually appealing design, I present my projects and accomplishments in a
@@ -687,13 +707,18 @@
                                     <h3 class="card-title">JavaScript</h3>
 
                                 </div>
-                                <a target="_blank" href="https://tyagi-achint.github.io/Square/"
-                                    class="card-link">View</a>
-
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/Square"
+                                        class="card-link">Code</a>
+                                    <a target="_blank" href="https://tyagi-achint.github.io/Square/"
+                                        class="card-link">Live</a>
+                                </div>
                                 <div class="discripition">
                                     <p>
-                                        Explore a dynamic JavaScript-powered website that displays the squares of even
-                                        numbers up to 40 and provides an interactive box for you to input any number and
+                                        Explore a dynamic JavaScript-powered website that displays the squares of
+                                        even
+                                        numbers up to 40 and provides an interactive box for you to input any number
+                                        and
                                         instantly see its square value.</p>
                                 </div>
 
@@ -712,8 +737,16 @@
                                     <h3 class="card-title">HTML & CSS</h3>
 
                                 </div>
-                                <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-1/"
-                                    class="card-link">View</a>
+
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/OctaNet_June_Task-1"
+                                        class="card-link">Code</a>
+                                    <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-1/"
+                                        class="card-link">Live</a>
+                                </div>
+
+
+
                                 <div class="discripition">
                                     <p>Welcome to Yoga, a serene and tranquil online sanctuary dedicated to helping you
                                         find balance, peace, and vitality through the practice of yoga. My landing
@@ -735,8 +768,14 @@
                                     <h3 class="card-title">BootStrap</h3>
 
                                 </div>
-                                <a target="_blank" href="https://tyagi-achint.github.io/bootstrap-website/index.html"
-                                    class="card-link">View</a>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/bootstrap-website"
+                                        class="card-link">Code</a>
+                                    <a target="_blank"
+                                        href="https://tyagi-achint.github.io/bootstrap-website/index.html"
+                                        class="card-link">Live</a>
+                                </div>
+
 
                                 <div class="discripition">
                                     <p>Discover a stunning website clone built with Bootstrap, CSS, and HTML. Experience
