--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                     </div>
                 </div>
                 <div id="projects">
-                    <p class="headings">Live Projects</p>
+                    <p class="headings">Projects</p>
                     <hr class="textUnderline">
                     <p class="headings" style="
                     margin-left: 5vw;"">
@@ -577,6 +577,31 @@
                     <br>
                     <div class="container">
                         <ul class="cards">
+
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg"
+                                        style="background-image: url(Assests/Images/ExpenseTracker.png);">
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Expense Tracker</p>
+                                    </div>
+                                    <h3 class="card-title">Python(Flask) & JavaScript </h3>
+                                </div>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/ExpenseTracker"
+                                        class="card-link">Code</a>
+                                </div>
+                                <div class="discripition">
+                                    <p>A web application built using Flask, a Python web framework, to
+                                        track and visualize expenses from a CSV file. The application allows users to
+                                        upload a CSV file containing transaction data, performs data validation and
+                                        cleaning, and presents a summary of income, expenses, and a breakdown of
+                                        expenses by category. The expense data is visualized using a bar chart, and
+                                        users can filter the chart based on predefined amount ranges.</p>
+                                </div>
+                            </li>
+
                             <li class="card">
                                 <div class="cardData">
                                     <div class="cardImg"
