--- a/index.html
+++ b/index.html
@@ -976,10 +976,11 @@
                 </div>
             </div>
             <div class="footer">
+                Copyright © <span id="currentYear"></span>
                 <p>
                     Designed & Developed by <a href="tyagi-achint.github.io">Achint Tyagi</a>
                 </p>
-                Copyright © <span id="currentYear"></span>.
+
             </div>
         </div>
 
