--- a/index.html
+++ b/index.html
@@ -577,6 +577,70 @@
                     <br>
                     <div class="container">
                         <ul class="cards">
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg" style="background-image: url(Assests/Images/Weather_App.png);">
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Weather App</p>
+                                    </div>
+                                    <h3 class="card-title">Python(Flask) & Docker</h3>
+                                </div>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/Weather-App"
+                                        class="card-link">Code</a>
+                                </div>
+                                <div class="discripition">
+                                    <p>A simple web application built using Flask that allows users to check the current
+                                        weather and forecast for a given city. The application uses the OpenWeatherMap
+                                        API to retrieve weather data.</p>
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg"
+                                        style="background-image: url(Assests/Images/GitHub-Repository-Explorer.png);">
+                                    </div>
+                                    <div class="card-content">
+                                        <p>GitHub Repository Explorer</p>
+                                    </div>
+                                    <h3 class="card-title">HTML, CSS & JavaScript</h3>
+                                </div>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/ExpenseTracker"
+                                        class="card-link">Code</a>
+                                    <a target="_blank" href="https://tyagi-achint.github.io/GitHub-Repository-Explorer/"
+                                        class="card-link">Live</a>
+                                </div>
+                                <div class="discripition">
+                                    <p>GitHub Repository Explorer is a web application built using HTML, CSS, and
+                                        JavaScript. It provides a user-friendly interface to search and explore GitHub
+                                        repositories and users.</p>
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg"
+                                        style="background-image: url(Assests/Images/Password_generator.png);">
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Password Generator</p>
+                                    </div>
+                                    <h3 class="card-title">Python(Flask) & Docker</h3>
+                                </div>
+                                <div class="projectLinks">
+                                    <a target="_blank" href="https://github.com/tyagi-achint/Random-Password-Generator"
+                                        class="card-link">Code</a>
+                                </div>
+                                <div class="discripition">
+                                    <p>This is a simple Flask web application that generates random passwords based on
+                                        user input.</p>
+                                </div>
+                            </li>
+
+
+
+
 
                             <li class="card">
                                 <div class="cardData">
