--- a/index.html
+++ b/index.html
@@ -354,23 +354,12 @@
                                         <h5>PhP</h5>
                                     </div>
                                     <div class="skill-progress">
-                                        <span class="progres" data-value="55%" style="width: 50%;"></span>
+                                        <span class="progres" data-value="70%" style="width: 70%;"></span>
                                     </div>
-                                    <span class="value">50%</span>
+                                    <span class="value">70%</span>
                                 </div>
                             </div>
-                            <div class="col">
-                                <div class="item">
-                                    <div class="item-name">
-                                        <img src="Assests/Images/008-react.png">
-                                        <h5>ReactJS</h5>
-                                    </div>
-                                    <div class="skill-progress">
-                                        <span class="progres" data-value="20%" style="width: 20%;"></span>
-                                    </div>
-                                    <span class="value">20%</span>
-                                </div>
-                            </div>
+
                             <div class="col">
                                 <div class="item">
                                     <div class="item-name">
@@ -410,6 +399,23 @@
                             <div class="col">
                                 <div class="item">
                                     <div class="item-name">
+                                        <img src="Assests/Images/typescript.png">
+                                        <h5>Typescript</h5>
+                                    </div>
+                                    <div class="skill-progress">
+                                        <span class="progres" data-value="35%" style="width: 35%;"></span>
+                                    </div>
+                                    <span class="value">35%</span>
+                                </div>
+                            </div>
+
+
+
+
+
+                            <div class="col">
+                                <div class="item">
+                                    <div class="item-name">
                                         <img src="Assests/Images/007-wordpress.png">
                                         <h5>WordPress</h5>
                                     </div>
@@ -419,7 +425,18 @@
                                     <span class="value">60%</span>
                                 </div>
                             </div>
-
+                            <div class="col">
+                                <div class="item">
+                                    <div class="item-name">
+                                        <img src="Assests/Images/008-react.png">
+                                        <h5>ReactJS</h5>
+                                    </div>
+                                    <div class="skill-progress">
+                                        <span class="progres" data-value="25%" style="width: 25%;"></span>
+                                    </div>
+                                    <span class="value">25%</span>
+                                </div>
+                            </div>
                             <div class="col">
                                 <div class="item">
                                     <div class="item-name">
