--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- BACKGROUND COLOR  -->
         <div id="switchColor">
-            <i class="fa-solid fa-caret-up"></i>
+            <i class="fa-solid fa-caret-up fa-bounce"></i>
             <div class="colorPanel">
                 <ul>
                     <li class="colorActive"></li>
