--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <!-- Loading Page -->
-    <!-- <div id="loadingPage">
+    <div id="loadingPage">
         <svg class="pl" viewBox="0 0 200 200" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
             <defs>
                 <linearGradient id="pl-grad1" x1="1" y1="0.5" x2="0" y2="0.5">
@@ -53,7 +53,7 @@
             <line class="pl__ball" stroke="url(#pl-grad2)" x1="100" y1="18" x2="100.01" y2="182" stroke-width="36"
                 stroke-dasharray="1 165" stroke-linecap="round" />
         </svg>
-    </div> -->
+    </div>
     <!-- Body -->
     <div class="pageContent">
         <!-- BACKGROUND COLOR  -->
