--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="Assests/CSS/candle.css" />
     <link rel="stylesheet" href="Assests/CSS/bottomContent.css" />
     <link rel="stylesheet" href="Assests/CSS/topContent.css" />
-    <link rel="stylesheet" href="Assests/CSS/extraStyle.css" />
+    <link rel="stylesheet" href="Assests/CSS/moreStyle.css" />
 </head>
 
 <body>
