--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description"
-        content="View my professional work and achievements showcased on my personal portfolio page">
     <title>Achint Tyagi</title>
 
     <!-- FAVICON  -->
@@ -29,6 +27,7 @@
     <script src="https://kit.fontawesome.com/bf027e9367.js" crossorigin="anonymous"></script>
 
     <!-- CSS  -->
+    <link rel="stylesheet" href="Assests/CSS/candle.css" />
     <link rel="stylesheet" href="Assests/CSS/bottomContent.css" />
     <link rel="stylesheet" href="Assests/CSS/topContent.css" />
     <link rel="stylesheet" href="Assests/CSS/moreStyle.css" />
@@ -1066,6 +1065,5 @@
         setInterval(changeText, 2000);
     </script>
 </body>
-
 
 </html>
