--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
 </body>
 
-<script src="/Assests/_Script.js"></script>
+<script src="/Assests/Script.js"></script>
 
 <!-- LordIcon Script -->
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
