--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Achint Tyagi</title>
 
     <!-- FAVICON  -->
-    <link rel="apple-touch-icon" sizes="180x180" href="Assests/favicon_io/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="Assests/favicon_io/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="Assests/favicon_io/favicon-16x16.png" />
-    <link rel="manifest" href="Assests/favicon_io/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./Assests/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./Assests/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./Assests/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./Assests/favicon/site.webmanifest" />
 
 
     <!-- Merriweather FONT -->
