--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <hr class="textUnderline" />
                 <div class="projectContainer">
                     <li class="card">
-                        <img src="/Assests/Images/Resume-Builder.png" alt="">
+                        <img src="./Assests/Images/Resume-Builder.png" alt="">
                         <div class="cardData">
                             <h3>Resume Builder</h3>
                             <ul>
