--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         </div>
                     </li>
                 </div>
-                <h1 class="viewProjectButton">
+                <h1 class="viewProjectButton" onclick="openProjectsPopUp()">
                     View All <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </h1>
             </div>
