--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <link rel="stylesheet" href="./Assests/CSS/Screen-Min-980px.css">
     <link rel="stylesheet" href="./Assests/CSS/Screen-Max-980px.css">
     <link rel="stylesheet" href="./Assests/CSS/Animation.css">
+    <link rel="stylesheet" href="./Assests/CSS/ProjectsPopUp.css">
+
 
 </head>
 
@@ -640,6 +642,16 @@
                 <li class="fa-regular fa-lightbulb"></li>
                 <li class="fa-regular fa-lightbulb"></li>
             </ul>
+        </div>
+    </div>
+
+    <div id="ProjectsPopUp">
+        <div class="content">
+            <i class="fa-solid fa-circle-xmark" onclick="closeProjectsPopUp()"></i>
+            <h1>
+                View all of my projects
+                <a href="https://github.com/tyagi-achint?tab=repositories" target="_blank">@ Github</a>
+            </h1>
         </div>
     </div>
 
