--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" designation="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Add the Permissions-Policy meta tag -->
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <meta name="description"
         designation="View my professional work and achievements showcased on my personal portfolio page">
     <title>Achint Tyagi</title>
